--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   username: postgres
-  password: ***
+  password: pgres@2022
   host: localhost
   port: 5432
 
