--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@
 /node_modules
 yarn-debug.log*
 .yarn-integrity
+
+/config/credentials/development.key
+
+/config/credentials/staging.key
+
+/config/credentials/production.key
